--- a/rooster-grin-project/roostergrin/src/Components/TextBlock/TextBlock.css
+++ b/rooster-grin-project/roostergrin/src/Components/TextBlock/TextBlock.css
@@ -1,8 +1,22 @@
-.textwrapper {
+
+.words {
+  margin-left: 20%;
+padding-top: 10%;
+padding-bottom: 10%;
+padding-right: 8%;
+
 }
+
 h2 {
   color: purple;
+  font-size: 3em;
 }
 p {
-  font-size: 2em
+  font-size: 2em;
+  display: block;
+}
+
+a {
+  color: purple;
+  font-size: 2em;
 }
