--- a/rooster-grin-project/roostergrin/src/Components/Header/Header.css
+++ b/rooster-grin-project/roostergrin/src/Components/Header/Header.css
@@ -1,13 +1,24 @@
 
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
 
 .btn {
   color: white;
-  background-color: purple;
+  background-color: #b579d2;
+  border-color: #b579d2;
+  border-radius: 0;
 }
 
-.logo {
-  max-width: 20vw;
-  margin-left: 10%;
+.header {
+  width: 100%;
+  height: 10%;
 }
 
 
@@ -16,6 +27,23 @@
   background-image: url("../../front-end-dev-test-assets/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 70vh;
-  width: auto;
+  height: 80vh;
+}
+
+#logo {
+  margin-left: 10%;
+  padding-top: 5%;
+  width: 20vw;
+}
+
+#welcome {
+  margin-top: 20vh;
+  text-align: center;
+  color: white;
+  position: relative;
+  animation: fade-in 4s linear;
+}
+
+h4 {
+  font-size: 10vh;
 }
