--- a/rooster-grin-project/roostergrin/src/Components/ImageBlock/ImageBlock.css
+++ b/rooster-grin-project/roostergrin/src/Components/ImageBlock/ImageBlock.css
@@ -4,6 +4,23 @@
 
 }
 
+@keyframes rotate-scale-up {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+            transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(2) rotateZ(180deg);
+            transform: scale(2) rotateZ(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+            transform: scale(1) rotateZ(360deg);
+  }
+}
+
+
 .imagewrapper:hover {
   background-color: purple;
+  animation: rotate-scale-up 0.65s linear both;
 }
