--- a/rooster-grin-project/roostergrin/src/Components/TextBlock/TextBlock.css
+++ b/rooster-grin-project/roostergrin/src/Components/TextBlock/TextBlock.css
@@ -4,19 +4,23 @@
 padding-top: 10%;
 padding-bottom: 10%;
 padding-right: 8%;
-
+text-align: center;
 }
 
 h2 {
   color: purple;
-  font-size: 3em;
+  font-size: 5vh;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
 }
 p {
-  font-size: 2em;
+  font-size: 2vh;
   display: block;
+  text-align: center;
 }
 
 a {
   color: purple;
-  font-size: 2em;
+  font-size: 3vh;
+  text-align: center;
 }
