--- a/rooster-grin-project/roostergrin/src/Components/Carousel/Carousel.css
+++ b/rooster-grin-project/roostergrin/src/Components/Carousel/Carousel.css
@@ -1,18 +1,20 @@
 
 .carouselContainer {
-  height: 100%;
+  height: 90%;
+  width: 100%;
 }
 
-.carousel-control-prev-icon,
+/* .carousel-control-prev-icon,
 .carousel-control-next-icon {
+
   height: 100px;
   width: 100px;
   outline: black;
   background-size: 100%, 100%;
   border-radius: 50%;
-  border: 1px solid purple;
+  border: 5px solid purple;
   background-image: none;
-}
+} */
 
 .carousel-control-next-icon:after
 {
@@ -22,6 +24,7 @@
 }
 
 .carousel-control-prev-icon:after {
+  margin-left: 50%;
   content: '<';
   font-size: 55px;
   color: red;
