--- a/rooster-grin-project/roostergrin/src/Components/Header/Header.css
+++ b/rooster-grin-project/roostergrin/src/Components/Header/Header.css
@@ -27,11 +27,11 @@
   background-image: url("../../front-end-dev-test-assets/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 80vh;
+  height: 100vh;
 }
 
 .outline {
-  -webkit-text-stroke: 2px white;
+  -webkit-text-stroke: 1.5px white;
   color: transparent;
 
 }
@@ -40,10 +40,12 @@
   margin-left: 10%;
   padding-top: 5%;
   width: 20vw;
+
 }
 
 #welcome {
   font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
   margin-top: 20vh;
   text-align: center;
   color: white;
@@ -52,8 +54,9 @@
 }
 
 h4 {
-  font-size: 6vh;
+    font-family: 'Open Sans', sans-serif;
+      font-weight: bold;
+  font-size: 6vw;
+  text-size-adjust: 30%;
   fill: "none";
-  stroke-width: ".015";
-  stroke: "black";
 }
